tenzir/integration/data/reference/pipelines_local/test_assert_operator/step_01.ref
{"x": 1}
{"x": 3}
warning: assertion failure
 --> <input>:1:40
  |
1 | from [{x: 1}, {x: 2}, {x: 3}] | assert x != 2
  |                                        ~~~~~~ 
  |

error: encountered warnings in strict mode